KIT/NNPIA - Cvičení 5 - CRUD v Thymeleaf

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -3,7 +3,7 @@
 <div th:replace="fragments/head::htmlHead"></div>
 <body>
 <div th:replace="fragments/navigation::navbar"></div>
-<h2>ERROR!</h2>
-<p>404 Nenalezeno!</p>
+<h2>Nákupní košík</h2>
+<p>Váš košík neobsahuje žádné položky!</p>
 </body>
 </html>
